# Farmer

./: .gitignore  CMakeLists.txt  README.md
core/: CMakeLists.txt  finders.c  finders.h
core/stringtool/: CMakeLists.txt  char_out_stream.c  char_out_stream.h  strfind.c  strfind.h
core/stringtool/tests/: CMakeLists.txt  test_char_out_stream.c  test_strfind.c
core/testinclude/: README.md  testing_messages.h
core/utils/: CMakeLists.txt  djb2_hash.c  djb2_hash.h
main/: CMakeLists.txt  main.c
